package com.lld.theater;

public class Seat {
}
