package com.lld.theater;

public class Theater {
}
