package com.project;

public enum BookingStatus {
    PENDING,
    PAID
}
