package com.LLD.Payment;

public enum PaymentMethod {
    CREDIT_CARD,
    CASH,
    MOBILE_PAYMENT
}
